--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library App</title>
+    <style>
+        /* Set the background image */
+        body {
+            background-image: url('https://www.example.com/path-to-your-background-image.jpg');
+            background-size: cover; /* Make sure the background image covers the entire page */
+        }
+    </style>
 </head>
 <body style="color: red;">
 
@@ -31,3 +38,4 @@
 
 </body>
 </html>
+
