--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Set the background image */
         body {
-            background-image: url('https://www.example.com/path-to-your-background-image.jpg');
+            background-image: url('<a href="https://pikbest.com//backgrounds/ultra-hd-exquisite-texture-abstract-beige-tan-background-with-rich-brown-hues_9983982.html">Free  backgrounds from pikbest.com</a>');
             background-size: cover; /* Make sure the background image covers the entire page */
         }
     </style>
