--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>Library App</title>
     <style>
         /* Set the background image */
-        body {
-            background-image: url('<a href="https://pikbest.com//backgrounds/ultra-hd-exquisite-texture-abstract-beige-tan-background-with-rich-brown-hues_9983982.html">Free  backgrounds from pikbest.com</a>');
-            background-size: cover; /* Make sure the background image covers the entire page */
+       
+          body {
+    background-image: url('<a href="https://pikbest.com//backgrounds/ultra-hd-exquisite-texture-abstract-beige-tan-background-with-rich-brown-hues_9983982.html">Free  backgrounds from pikbest.com</a>');
+    background-size: cover;  /* Ensures the image covers the whole screen */
+    background-position: center;  /* Centers the image */
+    background-attachment: fixed;  /* Keeps the background fixed during scroll */
+}
+
         }
     </style>
 </head>
