--- a/index.html
+++ b/index.html
@@ -6,25 +6,23 @@
     <title>Library App</title>
     <style>
         /* Set the background image */
-       
-          body {
-    background-image: url('<a href="https://pikbest.com//backgrounds/ultra-hd-exquisite-texture-abstract-beige-tan-background-with-rich-brown-hues_9983982.html">Free  backgrounds from pikbest.com</a>');
-    background-size: cover;  /* Ensures the image covers the whole screen */
-    background-position: center;  /* Centers the image */
-    background-attachment: fixed;  /* Keeps the background fixed during scroll */
-}
-
+        body {
+            background-image: <a href="https://pikbest.com//backgrounds/ultra-hd-exquisite-texture-abstract-beige-tan-background-with-rich-brown-hues_9983982.html">Free  backgrounds from pikbest.com</a>('images/background.jpg'); /* Make sure to update with your image file name */
+            background-size: cover;  /* Ensures the image covers the whole screen */
+            background-position: center;  /* Centers the image */
+            background-attachment: fixed;  /* Keeps the background fixed during scroll */
+            color: red; /* Text color */
         }
     </style>
 </head>
-<body style="color: red;">
+<body>
 
     <h1>Welcome to my website</h1>
     <p>Here you can keep track of books you have or haven't read</p>
     <p>I hope you enjoy it</p>
 
     <!-- Image Link -->
-    <a href="https://en.wikipedia.org/wiki/Library">
+    <a href="https://en.wikipedia.org/wiki/Library"> 
         <img src="images/School Library Mural.jpg" alt="School Library Mural">
     </a>
 
@@ -43,4 +41,5 @@
 
 </body>
 </html>
+
 
