--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <style>
         /* Set the background image */
         body {
-            background-image: <a href="https://pikbest.com//backgrounds/ultra-hd-exquisite-texture-abstract-beige-tan-background-with-rich-brown-hues_9983982.html">Free  backgrounds from pikbest.com</a>('images/background.jpg'); /* Make sure to update with your image file name */
-            background-size: cover;  /* Ensures the image covers the whole screen */
-            background-position: center;  /* Centers the image */
-            background-attachment: fixed;  /* Keeps the background fixed during scroll */
-            color: red; /* Text color */
-        }
+    background-image: url('School Library Mural.jpg/background.jpg'); /* Path relative to the current directory */
+    background-size: cover;  /* Ensures the image covers the whole screen */
+    background-position: center;  /* Centers the image */
+    background-attachment: fixed;  /* Keeps the background fixed during scroll */
+}
+
     </style>
 </head>
 <body>
