--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Library App</title>
     <style>
         /* Set the background image */
-        body {
-    background-image: url('School Library Mural.jpg/background.jpg'); /* Path relative to the current directory */
-    background-size: cover;  /* Ensures the image covers the whole screen */
-    background-position: center;  /* Centers the image */
-    background-attachment: fixed;  /* Keeps the background fixed during scroll */
-}
+        <body background=
+"https://pikbest.com/backgrounds/ultra-hd-exquisite-texture-abstract-beige-tan-background-with-rich-brown-hues_9983982.html>
+    <h1>Background Image with the Help of HTML</h1>
+    <p>
+        The html body background attribute 
+        is used to add background image
+    </p>
+</body>
 
     </style>
 </head>
