--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script>
         function clickifyouread() {
             document.getElementById("test").innerHTML = "Read";
+            document.getElementById("test").innerHTML = "Didn't Read";
         }
     </script>
 
