--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
     
     <!-- Paragraph to update -->
     <p id="test">Didn't Read</p>
+     <p id="test">Read</p>
 
     <!-- JavaScript Function -->
     <script>
         function clickifyouread() {
             document.getElementById("test").innerHTML = "Read";
-            document.getElementById("test").innerHTML = "Didn't Read";
+         
         }
     </script>
 
