--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         }
     </script>
     
-<form>
-  <input name="name of book " type="text"/>
-  <button type="submit"> Send </button>
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" value="John"><br><br>
+  <input type="submit" value="Submit">
 </form>
-
     
 </body>
 </html>
