--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 </body>
 
     </style>
+
+    <html>
+(head>
+<title›Link CSS to HTML</title›
+‹link rel="stylesheet"
+type="text/css" href="style.css">
+</head>
+    
 </head>
 <body>
 
