--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 
     <html>
-(head>
+<head>
 <title›Link CSS to HTML</title›
 ‹link rel="stylesheet"
 type="text/css" href="style.css">
