--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             background-attachment: fixed;
         }
     </style>
+
+
+    <body>
+   <script src="js/MainContent.js"></script>
+</body>
+    
 </head>
 <body>
     <h1>Welcome to my website</h1>
