--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <!-- Internal CSS for background image -->
-    <style>
-        body {
-            background-image: url('https://pikbest.com/backgrounds/ultra-hd-exquisite-texture-abstract-beige-tan-background-with-rich-brown-hues_9983982.html');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-    </style>
+   <head>
+   <body style="background-color: tan ;">
+
+   </body> 
+            </html>
+
+
+       
 
 
     <body>
