--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
     <!-- Link to External CSS File -->
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <!-- Internal CSS for background image -->
-   <head>
-   <body style="background-color: tan ;">
-
-   </body> 
-            </html>
-
-
-       
-
-
-    <body>
-   <script src="js/MainContent.js"></script>
-</body>
-    
+    <!-- Internal CSS for Background Color -->
+    <style>
+        body {
+            background-color: tan;
+        }
+    </style>
 </head>
 <body>
+    <!-- JavaScript File -->
+    <script src="js/MainContent.js"></script>
+
     <h1>Welcome to my website</h1>
     <p>Here you can keep track of books you have or haven't read</p>
     <p>I hope you enjoy it</p>
