--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- JavaScript File -->
-    <script src="js/MainContent.js"></script>
+    <script src="MainContent.js"></script>
 
     <h1>Welcome to my website</h1>
     <p>Here you can keep track of books you have or haven't read</p>
